cmake_minimum_required(VERSION 3.17)
project(design-patterns)

set(CMAKE_CXX_STANDARD 98)

add_executable(TemplateMethod template-method/TemplateMethod.cpp)
add_executable(Strategy strategy/Strategy.cpp)
add_executable(Observer observer/Observer.cpp)
add_executable(Decorator decorator/Decorator.cpp)
add_executable(Bridge bridge/Bridge.cpp)
add_executable(FactoryMethod factory-method/FactoryMethod.cpp)
add_executable(AbstractFactory abstract-factory/AbstractFactory.cpp)
add_executable(Prototype prototype/Prototype.cpp)
add_executable(Builder builder/Builder.cpp)
add_executable(Singleton singleton/Singleton.cpp)
add_executable(Flyweight flyweight/Flyweight.cpp)
add_executable(Facade facade/Facade.cpp)
add_executable(Proxy proxy/Proxy.cpp)
add_executable(Adapter adapter/Adapter.cpp)
add_executable(Mediator mediator/Mediator.cpp)
add_executable(State state/State.cpp)
add_executable(Memento memento/Memento.cpp)
add_executable(Composite composite/Composite.cpp)
add_executable(Iterator iterator/Iterator.cpp)
add_executable(ChainOfResponsibility chain-of-responsibility/ChainOfResponsibility.cpp)
add_executable(Command command/Command.cpp)
add_executable(Visitor visitor/Visitor.cpp)
add_executable(Interpreter interpreter/Interpreter.cpp)